# rbuild

./: .gitignore  .travis.yml  MANIFEST.in  README.md  requirements.txt  setup.py  tox.ini
.github/workflows/: tox.yml
doc/: commands.rst  conf.py  gettingstarted.rst  index.rst  requirements.txt
doc/flags/: build.rst  core.rst  dev_session.rst  main_session.rst  prepare.rst
doc/html/: .buildinfo  commands.html  config.html  genindex.html  gettingstarted.html  index.html  objects.inv  search.html  searchindex.js
doc/html/_sources/: commands.rst.txt  config.rst.txt  index.rst.txt
doc/html/_sources/flags/: build.rst.txt  dev_session.rst.txt  main_session.rst.txt  prepare.rst.txt
doc/html/flags/: build.html  core.html  dev_session.html  main_session.html  prepare.html
rbuild/: cli.py
test/: test_cli.py  test_rbuild.py
test/need_flag/: CMakeLists.txt  requirements.txt
test/need_flag/include/: need_flag.h
test/simple/: CMakeLists.txt
test/simple_direct/: CMakeLists.txt  requirements.txt
